src/objects/SCOM_Server__c.object
<CustomObject>
    <fields>
        <fullName>Applications__c</fullName>
        <description>Column &quot;u_application&quot; from the csv. The name of the application hosted on the Server.</description>
        <label>Applications</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <description>Column &quot;u_cmdb_criticality&quot; from csv.</description>
        <label>Criticality</label>
        <picklist>
            <picklistValues>
                <fullName>(5) Mission Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Business Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Business Important</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Productivity Important</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Non-Critical</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>&quot;Used_for&quot; from the csv. The environment the server is used for. Ex. Production, Development etc</description>
        <label>Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id for upsert operations from dataloader.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <description>Column &quot;host_name&quot; from the csv.</description>
        <label>Host Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <description>Column &quot;manufacturer&quot; from the csv.</description>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Id__c</fullName>
        <label>Model Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System_Version__c</fullName>
        <label>Operating System Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>&quot;short_description&quot; field from the csv</description>
        <label>Short Description</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Class_Name__c</fullName>
        <description>&quot;sys_class_name&quot; column from csv</description>
        <label>System Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Created_By__c</fullName>
        <description>Column &quot;sys_created_by&quot; from csv.</description>
        <label>System Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Created_On__c</fullName>
        <description>Column &quot;sys_created_on&quot; from csv.</description>
        <label>System Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SCOM Server</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Host_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Server Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SCOM Servers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>